# browser-core

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  package.json  pnpm-lock.yaml  rustfmt.toml
src/: lib.rs
src/store/: bookmark.rs  download.rs  history.rs  mod.rs
